--- a/src/view/user/Order/components/Bottom/Bottom.module.scss
+++ b/src/view/user/Order/components/Bottom/Bottom.module.scss
@@ -4,6 +4,8 @@
   line-height: 80px;
   margin: auto;
   display: flex;
+  border-radius: 40px;
+  box-shadow: 0px -10px 20px -10px var(--adm-color-primary);
   .left{
     border-right: none;
     flex: 1;
@@ -22,6 +24,7 @@
     padding: 0 10px;
     text-align: center;
     font-weight: bold;
+    
   }
 }
 
