--- a/src/view/user/Order/style.module.scss
+++ b/src/view/user/Order/style.module.scss
@@ -16,19 +16,20 @@
 }
 .content{
   height: calc(100vh - 150px );
-  display: flex;
+  display: inline-flex;
   justify-content: flex-start;
   align-items: stretch;
+  // background-color: red;
+  box-sizing: border-box;
   .side {
     flex: none;
-    padding-bottom: 120px;
     background-color: var(--adm-color-fill-content);
   }
   .main {
     flex: auto;
-    padding: 0 16px 30px;
+    padding: 0 16px 0px;
     overflow-y: scroll;
-    padding-bottom: 120px;
+    display: table-cell;
     h2 {
       margin: 0;
       padding: 12px 0;
@@ -40,6 +41,6 @@
   height: 100px;
   width: 100%;
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   padding: 10px;
 }
